--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-.jumbotron {
-  position: relative;
-  background: url("building.jpg") center;
-  width: 100%;
-  background-size: cover;
-  overflow: hidden;
-}
-
-.jumbotron h1 {
-  color: white;
-  text-align: center;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+.parallax {
+  background-attachment: fixed;
 }
